Rewrite arch (300->521) and platform (303->650+) topics + enhance api, io, loom
core/arch: Complete rewrite with architecture support matrix, AArch64/RISC-V/LoongArch details, 32-bit removal timeline, JIT optimization per architecture
platform: Major expansion with container best practices, macOS/Windows/Linux details, build system evolution
api/index.md: Enhanced API milestones
api/io/index.md: Added JDK 25-26 IO updates
core/loom: Verified and enhanced Virtual Threads status

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>